# keith

control/: CMakeLists.txt  common.ang  comms.h  hashgets.h  hwconfig.h  main.cpp  master.h  motordata.h  proputils.h  protocol.cpp  protocol.h  rover.ang  rover.h  roverexcept.h  slave.h  test.ang  test.cpp  words.cpp
firmware/common/: regDefinitions  regs.h  regsauto.cpp  regsauto.h
firmware/master/lib/: NewPing
firmware/master/src/: device.h  hwconfig.h  i2c.h  master.h  sketch.ino
firmware/slave/src/: config.h  hwconfig.h  motor.h  pidMotor.h  pwm.h  regsauto.ino  sketch.ino  slave_i2c.h  slave_i2c.ino
joystick/: joyclient.ang  joyserver.ang
motor/src/: encoder.h  pidMotor.h  sketch.ino
